# Analysis

./: CMakeLists.txt  README.md
apps/: Analysis.cpp  CMakeLists.txt  Plot.cpp
cmake/: Rapidcsv.cmake
include/: Channel.hpp  ChannelLinkDef.hpp  Event.hpp  Screen.hpp  Style.hpp
source/: CMakeLists.txt  Channel.cpp  Event.cpp  Screen.cpp  Style.cpp
